Checked in some css and html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,40 @@
 </head>
 
 <body>
-  <script src="index.js"></script>
+
+  <header>
+    <div class="wrapper">
+      <h1><strong>&lt;&nbsp;Coding<br>
+        </strong> <small>&nbsp;&nbsp;&nbsp;&nbsp;journey <br /> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; with<br /></small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Yasi ></strong></h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div id="my_image">
+      <div class="wrapper">
+        <img src="Yas.jpg" alt="my image" class="center">
+      </div>
+    </div>
+
+    <div id="info">
+      <div class="wrapper">
+        <h3>Are you ready?</h3>
+        <p>Hey there! I’m Yasi Khorram. Here to share my journey with you!<br />
+          I will share my step by step learning exprience! </p>
+        <a href="#" class="button-2">Get Started</a>
+      </div>
+    </div>
+
+  </main>
+  <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
